2004-02-14  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Serbian translation reviewed by Aleksandar
	Urošević. 

=== gnome-icon-theme 1.1.7 ===
	
2004-02-10  Pauli Virtanen  <pauli.virtanen@hut.fi>

	* fi.po: Updated Finnish translation.

2004-02-06  Robert Sedak  <robert.sedak@sk.htnet.hr>

	* hr.po: Updated Croatian translation.

2004-02-01  Laurent Dhima  <laurenti@alblinux.net>

	* sq.po: Updated Albanian translation.
 
2004-01-31  Mətin Əmirov  <metin@karegen.com>

	* az.po: Translation updated.

=== gnome-icon-theme 1.1.6 ===
	
2004-01-23  Funda Wang  <fundawang@linux.net.cn>

	* zh_CN.po: Updated Simplified Chinese translation.

2004-01-23  Andras Timar  <timar@gnome.hu>

	* hu.po: Updated Hungarian translation.

2004-01-15  Laurent Dhima  <laurenti@alblinux.net>

	* sq.po: Updated Albanian translation.

=== gnome-icon-theme 1.1.5 ===
	
2004-04-04  Duarte Loreto <happyguy_pt@hotmail.com>

	* pt.po: Revised Portuguese translation.

2004-01-04  Åsmund Skjæveland  <aasmunds@fys.uio.no>

	* nn.po: Added Norwegian Nynorsk translation

2004-01-02  Alessio Frusciante  <algol@firenze.linux.it>

	* it.po: Updated Italian translation by
	Luca Ferretti <elle.uca@infinito.it>.

=== gnome-icon-theme 1.1.4 ===
	
2003-12-22  Laurent Dhima  <laurenti@alblinux.net>

	* sq.po: Updated Albanian translation.

2003-12-20  Arafat Medini <lumina@silverpen.de>

	* ar.po: Added Arabic translation

2003-12-13  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation

2003-12-10  Tõivo Leedjärv  <toivo@linux.ee>

	* et.po: Updated Estonian translation
	by Allan Sims <allsi@eau.ee>.

=== gnome-icon-theme 1.1.3 ===
	
2003-12-04  Iñaki Larrañaga <dooteo@euskalgnu.org>

	* eu.po: Updated Basque translation.

2003-12-02  Žygimantas Beručka  <uid0@tuxfamily.org>

	* lt.po: Updated Lithuanian translation by
	Tomas Kuliavas <tokul@users.sourceforge.net>.

2003-11-28  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
