@@ -1,4 +1,6 @@
-[type: gettext/ini] index.theme.in
+# List of source files containing translatable strings.
+# Please keep this file sorted alphabetically.
+[type: gettext/ini] 48x48/emblems/emblem-OK.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-art.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-bin.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-camera.icon.in
@@ -18,7 +20,6 @@
 [type: gettext/ini] 48x48/emblems/emblem-multimedia.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-new.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-ohno.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-OK.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-package.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-people.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-personal.icon.in
@@ -30,3 +31,18 @@
 [type: gettext/ini] 48x48/emblems/emblem-special.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-urgent.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-web.icon.in
+[type: gettext/ini] index.theme.in
+scalable/emblems/emblem-OK.icon.in.h
+scalable/emblems/emblem-certified.icon.in.h
+scalable/emblems/emblem-cool.icon.in.h
+scalable/emblems/emblem-danger.icon.in.h
+scalable/emblems/emblem-distinguished.icon.in.h
+scalable/emblems/emblem-draft.icon.in.h
+scalable/emblems/emblem-favorite.icon.in.h
+scalable/emblems/emblem-generic.icon.in.h
+scalable/emblems/emblem-important.icon.in.h
+scalable/emblems/emblem-new.icon.in.h
+scalable/emblems/emblem-ohno.icon.in.h
+scalable/emblems/emblem-personal.icon.in.h
+scalable/emblems/emblem-special.icon.in.h
+scalable/emblems/emblem-urgent.icon.in.h
