@@ -1,5 +1,11 @@
 2004-02-14  Danilo Šegan  <dsegan@gmx.net>
 
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
+	* POTFILES.in: Added a comment and missing files.
+
+2004-02-14  Danilo Šegan  <dsegan@gmx.net>
+
 	* sr.po, sr@Latn.po: Serbian translation reviewed by Aleksandar
 	Urošević. 
 
